deploy/K8S/crud-web-api-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-web-api-srv
spec:
  type: NodePort
  selector:
    app: crudwebapi
  ports:
    - name: crudwebapi
      protocol: TCP
      port: 80
      targetPort: 80
