deploy/K8S/sale-web-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sale-web-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salewebapi
  template:
    metadata:
      labels:
        app: salewebapi
    spec:
      containers:
        - name: salewebapi
          image: you_docker_hub_name/salewebapi:latest
---
apiVersion: v1
kind: Service
metadata:
  name: sale-web-api-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: salewebapi
  ports:
    - name: webapi
      protocol: TCP
      port: 80
      targetPort: 80
