deploy/K8S/web-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: webapi
          image: you_docker_hub_name/webapi:latest
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: webapi
  ports:
    - name: webapi
      protocol: TCP
      port: 80
      targetPort: 80
